# KilterClimbGeneration

./: .gitignore  README.md  api.py  pyproject.toml
src/data/: dataset.py  make_dataset.py
src/models/: autoencoder.py  predictor.py
src/notebooks/: cnn.ipynb  data_exploration.ipynb
src/tests/: predict.py  test_route.py  validation.py
src/training/: predictor_train.py  train.py
src/utils/: Converter.py  grade_converter.py  to_tensor.py
src/visualisation/: visualize.py
