[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kilter-project"
version = "0.1.0"

authors = [
    {name = "Janekpriv", email = "janekpriv@gmail.com"}
]
requires-python = ">=3.8"

dependencies = [
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "torch==2.10.0"
]